fix white space under property editor (#2180)
* fix white space under property editor

* add css classes and remove hardcode

--- a/packages/@flow-builder/ui/src/builder_platform_interaction/decisionEditor/decisionEditor.css
+++ b/packages/@flow-builder/ui/src/builder_platform_interaction/decisionEditor/decisionEditor.css
@@ -5,3 +5,11 @@
 .outcomeListHeader {
     margin: auto;
 }
+
+.decisionElement {
+    height: 100%;
+}
+
+.decisionElementVertical {
+    min-height: 100%;
+}
